Use toList() onde possível