@@ -23,7 +23,7 @@ public class ArenasCompletion extends AbstractCompletion {
     @Override
     public Collection<String> getCompletions(BukkitCommandCompletionContext context) throws InvalidCommandArgument {
         List<String> inUse = getChallengeManager().getRequests().stream()
-                .map(cr -> cr.getChallenge().getConfig().getName()).collect(Collectors.toList());
+                .map(cr -> cr.getChallenge().getConfig().getName()).toList();
         if (context.hasConfig("in_use")) {
             return inUse;
         }
@@ -31,7 +31,7 @@ public class ArenasCompletion extends AbstractCompletion {
         final boolean group = Boolean.parseBoolean(context.getConfig("group"));
         List<String> arenas = getConfigurationDao().getConfigurations(ArenaConfiguration.class).stream()
                 .filter(a -> a.isGroupMode() == group).map(ArenaConfiguration::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         arenas.removeAll(inUse);
         return arenas;
