@@ -50,6 +50,6 @@ public class SimpleClansGroupManager extends GroupManager {
 
     @Override
     public @NotNull String buildStringFrom(@NotNull Collection<Group> groups) {
-        return Helper.buildStringFrom(groups.stream().map(Group::getId).collect(Collectors.toList()));
+        return Helper.buildStringFrom(groups.stream().map(Group::getId).toList(););
     }
 }
